# advanced-data-vis-project

./: .env.example  Dockerfile  README.md  app.py  db.py  docker-compose.yml  index.py  pyproject.toml
assets/: style.css
cache/: municipios_cache.csv  timeline_cache.csv
callbacks/: map_callbacks.py  scale_callbacks.py  sidebar_callbacks.py  timeline_callbacks.py
components/: boxplot.py  cor_raca.py  map.py  participantes.py  radar_areas.py  renda_familiar.py  scale.py  sidebar.py  snackbar.py  timeline.py  tipo_escola.py
data_cleaning/: prep.py
notebooks/: data_mining.ipynb  selecting_features.ipynb
queries/: boxplot_query.py  cor_raca_query.py  map_query.py  municipios_query.py  participantes_query.py  radar_query.py  renda_familiar_query.py  timeline_query.py  tipo_escola_query.py
scripts/: cursor.js
sql/: queries_1.sql  queries_2.sql  queries_3.sql  queries_4.sql
support_data/dicionarios/: Dicionário_Microdados_Enem_2014_2023.xlsx
support_data/geojson/br_states/: br_ac.json
utils/: constants.py  map_utils.py
